# Face_emotion_detector

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  render.yaml  requirements.txt
services/: emotion_detector.py
static/: index.html
