[project]
name = "face-emotion-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "httpx>=0.25.2",
    "numpy>=1.26.0",
    "pillow>=10.1.0",
    "psutil>=5.9.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "structlog>=23.2.0",
    "uvicorn[standard]>=0.24.0",
]
